Deleted unnecesary zip files, updated root index.html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <a href="Assignment_2\index.html">Assignment 2</a>
             <a href="Assignment_3\index.html">Assignment 3</a>
             <a href="Assingment_4_rev2\index.html">Assingment 4</a>
+            <a href="Assignment_5\index.html">Assignment 5</a>
         </nav>
         <main>
             <img src="bear.png" alt="A photo of a black bear.">
