Initial commits on main.js and eng-dary.osis.xml (sourced from https://github.com/seven1m/open-bibles/blob/master/eng-darby.osis.xml), and short updates to index.html

--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Bible Passage Search</title>
+        <meta charset="UTF-8">
     </head>
     <body>
-        
+        <script src="main.js"></script>
     </body>
 </html>
