--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <p id="testElement"></p>
         <script src="main.js"></script>
     </body>
 </html>
