Added select element for bible books

--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <p id="testElement"></p>
+        <select id="bibleBookDropdown">
+                
+        </select>
         <script src="main.js"></script>
     </body>
 </html>
