Added exercises folder, landing page, and further pages, updated main.js in prep for more select statements, added more selects to index in Assignment 6

--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- Elijah Dromarsky -->
+<!-- CS 460 JavaScript Programming -->
+<!-- Very basic HTML shell to show use of AJAX and Fetch API -->
+<!-- Select elements are populated in JS script asynchronously -->
+<!-- Event listeners are in JavaScript -->
 <html>
     <head>
         <title>Bible Passage Search</title>
@@ -8,6 +13,13 @@
         <select id="bibleBookDropdown">
                 
         </select>
+        <select id="chapterDropdown">
+
+        </select>
+        <select id="verseDropdown">
+
+        </select>
+        <submit type="submit">Print Verse</submit>
         <script src="main.js"></script>
     </body>
 </html>
