--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a href="Assingment_4_rev2\index.html">Assingment 4</a>
             <a href="Assignment_5\index.html">Assignment 5</a>
             <a href="Assignment_6/index.html">Assignment 6</a>
+            <a href="Exercises/index.html">Exercises</a>
         </nav>
         <main>
             <img src="bear.png" alt="A photo of a black bear.">
