Changed submit button from type submit to type input

--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -19,7 +19,7 @@
         <select id="verseDropdown">
 
         </select>
-        <submit type="submit">Print Verse</submit>
+        <input type="submit" value="Print Verse">
         <script src="main.js"></script>
     </body>
 </html>
