--- a/Exercises/index.html
+++ b/Exercises/index.html
@@ -4,8 +4,13 @@
         <title>Exercises</title>
     </head>
     <body>
+        <header>
+            <h1>Exercises</h1>
+        </header>
         <nav>
             <a href="fixMe1.html">Exercise 1</a>
+            <a href="fixMe2.html">Exercise 2</a>
+            <a href="fixMe3.html">Exercise 3</a>
         </nav>
     </body>
 </html>
