Testing changing HTML element inside printText

--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -25,6 +25,7 @@
             <label for="txtRef">Bible Reference Lookup: </label>
             <input type="text" name="txtRef" id="txtRef" placeholder="Enter a Bible reference">
             <input type="button" name="lookup" id="lookup" value="Search">
+            <p id="testLand"></p>
         </form>
         <script src="main.js"></script>
     </body>
