Added ul tag for completed queries

--- a/Assignment_6/index.html
+++ b/Assignment_6/index.html
@@ -25,8 +25,11 @@
             <label for="txtRef">Bible Reference Lookup: </label>
             <input type="text" name="txtRef" id="txtRef" placeholder="Enter a Bible reference">
             <input type="button" name="lookup" id="lookup" value="Search">
-            <p id="testLand"></p>
         </form>
+            <!-- <p id="testLand"></p> -->
+            <ul id="verseList">
+
+            </ul>
         <script src="main.js"></script>
     </body>
 </html>
