--- a/Assignment_7/index.html
+++ b/Assignment_7/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
+<!-- Elijah Dromarsky -->
+<!-- CS 460 -->
+<!-- Basic HTML shell for form entry and object creating, select dropdown populated in JS, all event listeners are in JS, table populated in JS -->
 <html>
     <head>
         <title>Birthday Database Portal</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Cool Form Entry Thing</h1>
         <form id="entryForm">
             <input type="text" name="firstName" id="firstName" placeholder="Enter a first name..." required><br>
             <input type="text" name="lastName" id="lastName" placeholder="Enter a last name..." required><br>
             <label for="birthday">Birthday: </label>
             <input type="date" id="birthday" name="birthday" required><br>
+            <p>Add a friend from the table below:</p>
+            <select id="friendsDropdown"></select>
+            <input type="hidden" id="friendsList" name="friendsList">
+            <input type="button" name="btnFriend" id="btnFriend" value="Add Existing Friend">
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </form>
+        <table id="entryTable">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>DOB</th>
+                <th>Friends List</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
         <script src="main.js"></script>
     </body>
 </html>
