--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             <a href="Assingment_4_rev2\index.html">Assingment 4</a>
             <a href="Assignment_5\index.html">Assignment 5</a>
             <a href="Assignment_6/index.html">Assignment 6</a>
+	        <a href="Assignment_7/index.html">Assignment 7</a>
+            <a href="Assignment_8/index.html">Assignment 8</a>
             <a href="Exercises/index.html">Exercises</a>
         </nav>
         <main>
