--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <a href="Assignment_6/index.html">Assignment 6</a>
 	        <a href="Assignment_7/index.html">Assignment 7</a>
             <a href="Assignment_8/index.html">Assignment 8</a>
+            <a href="Assignment_9/reactTutorial.html">Assignment 9</a>
             <a href="Exercises/index.html">Exercises</a>
         </nav>
         <main>
