Added Sine Graphs

--- a/Assignment_11/index.html
+++ b/Assignment_11/index.html
@@ -143,7 +143,9 @@
                 <canvas id="secondCanvas" class="myCanvi"></canvas>
             </div>
             <div id="barPlot" class="graphBox"></div>
-
+            <div id="piePlot" class="graphBox"></div>
+            <div id="donutPlot" class="graphBox"></div>
+            <div id="sinePlot" class="graphBox"></div>
         </div>
         <script src="main.js"></script>
     </body>
