Updated main index.html to have link to new assignment

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	        <a href="Assignment_7/index.html">Assignment 7</a>
             <a href="Assignment_8/index.html">Assignment 8</a>
             <a href="Assignment_9/reactTutorial.html">Assignment 9</a>
+            <a href="Assignment_11/index.html">Assignment 11</a>
             <a href="Exercises/index.html">Exercises</a>
         </nav>
         <main>
