--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <a href="Assignment_8/index.html">Assignment 8</a>
             <a href="Assignment_9/reactTutorial.html">Assignment 9</a>
             <a href="Assignment_11/index.html">Assignment 11</a>
+            <a href="Assignment_12/index.html">Assignment 12</a>
             <a href="Exercises/index.html">Exercises</a>
         </nav>
         <main>
