Added capstone to main index

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a href="Assignment_11/index.html">Assignment 11</a>
             <a href="Assignment_12/index.html">Assignment 12</a>
             <a href="Exercises/index.html">Exercises</a>
+            <a href="Capstone/capstone.html">Capstone Project</a>
         </nav>
         <main>
             <img src="bear.png" alt="A photo of a black bear.">
