Made countYZ function and populateSelector function operational

--- a/Capstone/capstone.html
+++ b/Capstone/capstone.html
@@ -8,9 +8,12 @@
         <link rel="stylesheet" href="capstone.css">
     </head>
     <body>
-        <!-- Display favorite verse from cookies or leave blank if no cookie found -->
         <!-- Dropdown selector populated in JS file -->
+        <select id="matt18"></select>
         <!-- Input allowing user text instead of dropdown -->
+        <input type="text" id="inputYZ" name="inputYZ" placeholder="Select a sentence from above or type in your own sentence.">
+        <div id="countYZ_result"></div>
+        <!-- Display favorite verse from cookies or leave blank if no cookie found -->
         <!-- Display results of countYZ using sentence as parameter -->
         <!-- Button to allow random sentence from URL text source -->
         <!-- Input and submit to allow for user to save favorite verse as cookie -->
